# Super-shell

./: Cargo.toml  LICENSE  README.md  history.txt
docs/: PLAN.md  VISION.md
src/: main.rs
