[package]
name = "super-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rustyline = "14.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swarms-rs = "0.1.9"
ollama-rs = "0.1.0"
ollama-rs = "0.1.0"
reqwest = { version = "0.12", features = ["json"] }

# Placeholder for local model integration
# qwen3 = { path = "./path/to/qwen3-bindings" }

# Placeholder for OpenCodex integration
# opencoders = { git = "https://github.com/path/to/opencodex" }